# flask-paseto-extended

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  Taskfile.yml  index.html  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/trivy/: sbom.yaml  vex.yaml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  python-package.yml  python-publish.yml  workflow-security.yml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 41018adc6e54ba0a.txt  48ffcec4d8933148.txt  ca23d391cd669e5.txt  ce576c2475308848.txt  d131e0ca7b87cf1c.txt  d5bab0fe4d8ea5b8.txt  dda080315f4a068a.txt  e19ff8cb0c7d1229.txt  f408d84aea2c7086.txt
data/test-cases/: 1005b8f5761974a2.json  103520df66c3cf38.json  104ecb1fb7bd622b.json  106b124d65195d03.json  10ab92db0c0acaa4.json  10b2c1092bb34e7d.json  10ce49b4fcfbe50e.json  10da77b4b55955f2.json  10ec905148b9eb00.json  10f9eeee9a900296.json  111f2d8b88559cbb.json  1144e5478da18146.json  1192ffc27219902d.json  11a9e51f99f599cc.json  11f8932a06338985.json  1201b8c6c5adce39.json  12779121d51b8ad6.json  12dceaa21defd259.json  12e5e4a4e4ed8de8.json  12e9a383a3721f09.json  1354c559a0b32a09.json  13e20a08e304c81b.json  141a59d04a0be7b9.json  14245b20f100d98f.json  142a87c8fe56288.json  145b357ed10084a1.json  1461291f330dcd3b.json  146a7c63a4155d91.json  1470c4075521261a.json  147fe57c43665a27.json  14a6318f785fde65.json  14c8821fb64d8da7.json  14d01f3e5a615751.json  14ffa28c3f12ff5f.json  155933e207d696c5.json  157e89f5c8abf9a1.json  15b1601abe5f81ea.json  160cff3bd1597de3.json  164c817e8981af48.json  16669ad96a3c590f.json  (+1983 more)
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: cookie_session.py  issuer_and_verifier.py  login_manager.py
export/: influxDbData.txt  prometheusData.txt
flask_paseto/: __init__.py  login_manager.py  utils.py
flask_paseto_extended/: __init__.py  config.py  cookie_session.py  exceptions.py  issuer.py  login_manager.py  token.py  utils.py  verifier.py
history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: conftest.py  test_cookie_session.py  test_issuer.py  test_issuer_and_verifier.py  test_login_manager.py  test_verifier.py
widgets/: behaviors.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
