[build-system]
requires = ["uv_build>=0.9.7,<1"]
build-backend = "uv_build"

[project]
name = "flask-paseto-extended"
version = "0.6.1"
description = "PASETO (Platform-Agnostic Security Tokens) for Flask applications."
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "Werkzeug>=3,<4",
    "Flask>3,<4",
    "Flask-Login>=0.6.3,<0.7",
    "pyseto>=1.7.8,<2",
]
authors = [{ name = "Ajitomi Daisuke", email = "dajiaji@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/dajiaji/flask-paseto-extended"

[project.optional-dependencies]
test = [
    "pytest~=8.3",
    "pytest-cov>=6,<8",
    "tox>=4.23.2,<5",
    "pre-commit>=4.0.1,<5",
]
docs = [
    "sphinx>=7.1,<8.0.0",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "sphinx-autodoc-typehints>=2.3.0,<3.0.0",
    "docutils>=0.21.2,<1.0.0",
]

[tool.uv.build-backend]
module-name = "flask_paseto_extended"
module-root = ""
source-include = [
    "tests/**",
    "docs/**",
]
source-exclude = [
    "docs/_build/**",
]

[tool.mypy]
ignore_missing_imports = true
