[build-system]
requires = ["uv_build>=0.9.7,<1"]
build-backend = "uv_build"

[project]
name = "flask-paseto-extended"
version = "0.6.2"
description = "PASETO (Platform-Agnostic Security Tokens) for Flask applications."
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "Werkzeug>=3,<4",
    "Flask>3,<4",
    "Flask-Login>=0.6.3,<0.7",
    "pyseto>=1.7.8,<2",
]
authors = [{ name = "Ajitomi Daisuke", email = "dajiaji@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Repository = "https://github.com/dajiaji/flask-paseto-extended"

[project.optional-dependencies]
test = [
    "pytest~=8.3",
    "pytest-cov>=6,<8",
    "tox>=4.23.2,<5",
    "pre-commit>=4.0.1,<5",
]
docs = [
    "sphinx>=7.1,<8.0.0",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "sphinx-autodoc-typehints>=2.3.0,<3.0.0",
    "docutils>=0.21.2,<1.0.0",
]
dev = [
    "ruff>=0.14.6",
    "mypy>=1.13.0",
]

[tool.uv.build-backend]
module-name = "flask_paseto_extended"
module-root = ""
source-include = [
    "tests/**",
    "docs/**",
]
source-exclude = [
    "docs/_build/**",
]

[tool.mypy]
ignore_missing_imports = true
pretty = true
warn_unused_ignores = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
python_version = "3.9"
exclude = "^(tests|examples)/"

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
target-version = "py39"
line-length = 128  # Match black configuration used by pre-commit hooks.

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true  # Mirrors blacken-docs formatting of fenced blocks.
docstring-code-line-length = 128

[tool.ruff.lint]
# Match the flake8 + flake8-bugbear setup from .pre-commit-config.yaml by enabling
# E/F/W plus B codes, and extend with Ruff's built-in equivalents for the
# plugins we already run (flake8-comprehensions, pyupgrade, flake8-unused-arguments,
# flake8-simplify, isort, debug-statements) per docs.astral.sh/ruff/rules/.
select = [
    "B",
    "E",
    "F",
    "W",
    "I",
    "T10",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = ["E203", "E501"]  # W503 is unnecessary; Ruff doesn't expose that legacy rule.

[tool.ruff.lint.isort]
known-first-party = ["flask_paseto_extended", "tests"]
