[metadata]
name = Flask PASETO Extended
version = attr: flask_paseto_extended.__version__
author = Ajitomi Daisuke
author_email = dajiaij@gmail.com
description = A Flask extension that provides PASETO (Platform-Agnostic Security Token).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = flask paseto paserk jwt jose security token cryptography
url = https://github.com/dajiaji/flask-paseto-extended
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = find:
install_requires =
    Flask>=1.0,<3.0
    Flask-Login==0.5.0
    pyseto>=1.1.0<2.0

[options.package_data]
* = py.typed

[options.extras_require]
docs =
    sphinx>=4.2.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints >= 1.2.0
tests =
    pytest>=6.0.0
    pytest-cov>=2.0
    coverage[toml]>=5.0.4
dev =
    sphinx>=4.2.0
    sphinx-rtd-theme>=1.0.0
    pytest>=6.0.0
    coverage[toml]==5.0.4
    mypy

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
extend-ignore = E203, E501

[mypy]
python_version = 3.8
ignore_missing_imports = true
warn_unused_ignores = true
